--- a/intro.html
+++ b/intro.html
@@ -11,9 +11,9 @@
   <h2>Introduction to HTML</h2>
   <nav role="navigation">
     <ul>
-      <li>Introduction to HTML</li>
-      <li>HTML syntax</li>
-      <li>Structuring pages</li>
+      <li><a href="intro.html" title="Introduction to HTML">Introduction to HTML</a></li>
+      <li><a href="syntax.html" title="HTML syntax">HTML syntax</a></li>
+      <li><a href = "structure">Structuring pages</li>
       <li>Creating links</li>
       <li>HTML reference</li>
       <li>Next steps</li>
