--- a/intro.html
+++ b/intro.html
@@ -13,10 +13,10 @@
     <ul>
       <li><a href="intro.html" title="Introduction to HTML">Introduction to HTML</a></li>
       <li><a href="syntax.html" title="HTML syntax">HTML syntax</a></li>
-      <li><a href = "structure">Structuring pages</li>
-      <li>Creating links</li>
-      <li>HTML reference</li>
-      <li>Next steps</li>
+      <li><a href = "structure.html" title="Structuring pages">Structuring pages </a></li>
+      <li><a href = "links.html" title= "Creating links">Creating links</a></li>
+      <li><a href = "reference.html" title = "HTML reference" >HTML reference</a></li>
+      <li><a href = "next.html" title= "Next steps">Next steps</a></li>
     </ul>
   </nav>
 </header>
