--- a/links.html
+++ b/links.html
@@ -11,10 +11,10 @@
       <h2>Creating Links</h2>
       <nav role="navigation">
         <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
+          <li><a href="intro.html" title="Introduction to HTML">Introduction to HTML</a></li>
+          <li><a href="syntax.html" title="HTML syntax">HTML syntax</a></li>
+          <li><a href="structure.html" title="Structuring pages">Structuring pages</a></li>
+          <li><a href="structure.html" title="Structuring pages">Creating links</li>
           <li>HTML reference</li>
           <li>Next steps</li>
         </ul>
