--- a/links.html
+++ b/links.html
@@ -14,9 +14,9 @@
           <li><a href="intro.html" title="Introduction to HTML">Introduction to HTML</a></li>
           <li><a href="syntax.html" title="HTML syntax">HTML syntax</a></li>
           <li><a href="structure.html" title="Structuring pages">Structuring pages</a></li>
-          <li><a href="structure.html" title="Structuring pages">Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
+          <li><a href="links.html" title="creating links">Creating links</a></li>
+          <li><a href="reference.html" title="HTML reference">HTML reference</a></li>
+          <li><a href="next.html" title="Next steps">Next steps</a></li>
         </ul>
       </nav>
     </header>
@@ -168,7 +168,8 @@
       </article>
     </main>
     <footer role="contentinfo">
-      <p>CSUN 18111 Nordhoff St Northridge, CA 91330</p>
+      <p><a href= "http://www.csun.edu"  title = "CSUN site, csun.edu "target = "_blank">CSUN</a>18111 Nordhoff St Northridge, CA 91330</p>
+      <P><a href = "https://twitter.com/csunorthridge?lang=en" title = "csun twitter">follow us on Twitter</a></P>
     </footer>
   </body>
 </html>
