--- a/reference.html
+++ b/reference.html
@@ -23,10 +23,10 @@
 <main role="main">
   <article role="article">
     <header>
-      <p>On this page you&rsquo;ll find a quick reference to common HTML terms and a table of frequently used named character entities.</p>
+      <p>On this page you&rsquo;ll find a quick reference to common <a href = "#terms">HTML terms</a> and a <a href = "#aTable" >table</a> of frequently used named character entities.</p>
     </header>
     <section>
-      <h3>HTML Terms</h3>
+      <h3><a id = "terms">HTML Terms</a></h3>
       <dl>
         <dt>Attribute</dt>
         <dd> An HTML element property that provides additional information or functionality for an element. Attributes appear as a name/value pair with the value contained in quotation marks. </dd>
@@ -73,9 +73,9 @@
       </dl>
     </section>
     <section>
-      <table border="1" cellspacing="0" cellpadding="0" summary="A quick reference of named character entities, including an example of the character, a description, and the entity code.">
+      <table border="1" cellspacing="0" cellpadding="0" summary="A quick reference of named character entities, including an example of the character, a description, and the entity code." >
         <caption>
-        <h3>Common Named Character Entities </h3>
+          <h3><a id = "aTable">Common Named Character Entities </a></h3>
         </caption>
         <tr>
           <th scope="col">Character </th>
